--- a/style.css
+++ b/style.css
@@ -166,14 +166,15 @@ section{
 
 .section__text p{
     font-weight: 600;
+    
 }
 
-.section__text__p1{
+.section__text_p1{
     text-align: center;
 }
 
-.section__text__p1{
-    font-size: 1.75rem;
+.section__text_p2{
+    font-size: 1.75rem !important;
     margin-bottom: center;
 }
 
@@ -244,4 +245,35 @@ section{
 
 .btn-container{
     gap:1rem;
+}
+
+#experience {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.experience-subtitle {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.experience-company {
+    font-style: italic;
+    margin-bottom: 10px;
+}
+
+.experience-list {
+    list-style: none;
+    padding: 0;
+}
+
+.experience-list li {
+    margin: 5px 0;
+}
+
+.project-name {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 15px;
 }
