--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ section{
 
 /*Profile Section*/
 #profile{
+    position: relative;
     display: flex;
     justify-content: center;
     gap: 5rem;
@@ -280,7 +281,7 @@ section{
 
 /*About Section*/
 #about{
-    position: absolute;
+    position: relative;
 }
 
 .about-containers{
@@ -313,7 +314,7 @@ section{
     flex: 1;
     background: white;
     border-radius: 2rem;
-    border:rgb(53,53,53) 0.1rem soild;
+    border:rgb(53,53,53) 0.1rem solid;
     border-color: rgb(163,163,163);
     text-align: center;
 }
@@ -327,4 +328,43 @@ section{
     height: 400px;
     width: 400px;
     margin: auto 0;
+}
+
+/*Experience Section*/
+#experience{
+    position: relative;
+    
+}
+
+.experience-sub-title{
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.experience-details-cotainer{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container{
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+article{
+    display: flex;
+    width:10rem;
+    justify-content: space-around;
+    gap:0.5rem;
+}
+
+article .icon{
+    cursor: default;
 }
