--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ section{
     margin: 0 10rem;
     box-sizing: border-box;
     min-height: fit-content;
+    /* margin-bottom: 40px; */
 }
 
 .section-container{
@@ -347,6 +348,7 @@ section{
     display: flex;
     justify-content: center;
     flex-direction: column;
+    
 }
 
 .article-container{
@@ -367,4 +369,32 @@ article{
 
 article .icon{
     cursor: default;
+}
+
+/*projects section*/
+
+#projects{
+    margin-top: 50px;
+    position: relative;
+}
+
+.color-container{
+    border-color: rgb(163,163,163);
+    background: rgb(250,250,250);
+}
+
+.project-img{
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+
+.project-title{
+    margin: 1rem;
+    color:black;
+}
+
+.project-btn{
+    color:black;
+    border-color: rgb(163,163,163);
 }
