--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -63,4 +63,42 @@
   .about-containers, .contact-info-upper-container, .btn-container{
     flex-wrap: wrap;
   }
+  .contact-info-container{
+    margin: 0;
+  }
+  .contact-info-container p, .nav-links li a{
+    font-size: 1rem;
+  } 
+
+  .experience-sub-title{
+    font-size: 1.25rem;
+  }
+
+  .logo{
+    font-size: 1.5rem;
+  }
+
+  .nav-links{
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+  }
+
+  .section__pic-container{
+    width: auto;
+    height: 46vw;
+    justify-content: center;
+  }
+
+  .section__text_p2{
+    font-size: 1.25rem;
+  }
+
+  .title{
+    font-size: 2rem;
+  }
+
+  .text-container{
+    text-align: justify;
+  }
 }
